# SoftShadow

./: README.md  settings.gradle
NDKHelper/cpp/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h  NDKHelper.h
app/: CMakeLists.txt  build.gradle
app/libs/NDKHelper/NDKHelperBin/Debug/arm64-v8a/: cmake_install.cmake
app/libs/NDKHelper/NDKHelperBin/Debug/x86/: cmake_install.cmake
app/libs/NDKHelper/NDKHelperBin/Release/arm64-v8a/: cmake_install.cmake
app/libs/NDKHelper/cpp/: CMakeLists.txt
app/libs/assimp/include/assimp/: Importer.hpp  aabb.h  defs.h  material.h  mesh.h  scene.h
app/src/androidTest/java/com/example/softshadow/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hsm_base_frag.glsl  hsm_frag.glsl  hsm_vert.glsl  lit_frag.glsl  lit_frag_pcf.glsl  lit_frag_pcss.glsl  lit_frag_vssm.glsl  lit_vert.glsl  shadow_map_frag.glsl  shadow_map_vert.glsl  text_frag.glsl  triangle.txt  ui_frag.glsl  ui_vert.glsl  unlit_frag.glsl  unlit_vert.glsl  vsm_base_frag.glsl  vsm_frag.glsl
app/src/main/cpp/: Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Font.cpp  Font.h  GUI.cpp  GUI.h  GUIComponent.cpp  GUIComponent.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Panel.cpp  Panel.h  Renderer.cpp  Renderer.h  RotateScript.cpp  RotateScript.h  Scene.cpp  Scene.h  Script.cpp  Script.h  Shader.cpp  Shader.h  Slider.cpp  Slider.h  StatusScript.cpp  StatusScript.h  Text.cpp  (+9 more)
app/src/main/java/com/example/softshadow/: NDKHelper.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/softshadow/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
